--- a/src/main/webapp/view/css/adminAccount.css
+++ b/src/main/webapp/view/css/adminAccount.css
@@ -1,5 +1,5 @@
 body {
-    background: white;
+    background: #bdc7c9;
     font-family: Arial, serif;
     padding: 20px;
 }
@@ -88,4 +88,18 @@ a {
 }
 .table tbody tr:nth-child(even){
     background: #f3f3f3;
+}
+.onMain {
+    -webkit-text-stroke: 0.2px black;
+    top: 10px;
+    display: compact;
+    width: 6%;
+    margin: 10px 0;
+    background: #153e90;
+    color: white;
+    padding: 10px;
+    font-size: 0.9rem;
+    position: absolute;
+    border-radius: 5px;
+    border: 1px solid black;
 }
