--- a/src/main/webapp/view/css/adminAccount.css
+++ b/src/main/webapp/view/css/adminAccount.css
@@ -113,6 +113,7 @@ a {
     border-radius: 5px;
     border: 1px solid black;
 }
+
 .btn-link {
     border: none;
     outline: none;
@@ -123,4 +124,8 @@ a {
     text-decoration: underline;
     font-family: inherit;
     font-size: inherit;
+}
+
+a {
+    text-align: center;
 }
